# facework

./: CMakeLists.txt  analyze_train_image.cpp  analyze_train_mov.cpp  face_detection.cpp  install.sh  processor.cpp  processor.h
